Add heading statement

--- a/src/login.html
+++ b/src/login.html
@@ -164,6 +164,14 @@ a[class|="arrow"] {
         text-align: center;
     }
 
+    /* Heading */
+    .heading {
+        background-color: #000000;
+        color: #FFFFFF;
+        text-align: center;
+        padding: 5px;
+    }
+
 </style>  
 <!------------------------------------------------------------------------------->    
 
@@ -172,12 +180,13 @@ a[class|="arrow"] {
 <body>  
 
 <div id="counter">
-    <h1> The download will begin in <span id="countdowntimer">10 </span> Seconds</h1>
+    <h1> Access the internet in <span id="countdowntimer">10 </span> Seconds</h1>
 </div>
     
 <div id="hide" style="visibility: visible">
     <div class="heading">
         <h1>Steve's Electronics</h1>
+        <p class="statement">Welcome to Steve's Electronics</p>
     </div>
 <!--Start of ads slideshow-->
 <div class="slider">
