Changed image path to hotspot folder on server

--- a/src/login.html
+++ b/src/login.html
@@ -81,13 +81,13 @@ body {
   background-position: center center;
 }
 .slider .slider-inner .slide.slide1 {
-background-image: url("img1.jpg");
+background-image: url("https://box543.bluehost.com:2083/cpsess5064194921/viewer/home1%2fstevesel%2fpublic_html%2fhotspot/img1.jpg");
 }
 .slider .slider-inner .slide.slide2 {
-background-image: url("img2.jpg");
+background-image: url("https://box543.bluehost.com:2083/cpsess5064194921/viewer/home1%2fstevesel%2fpublic_html%2fhotspot/img2.jpg");
 }
 .slider .slider-inner .slide.slide3 {
-background-image: url("img3.jpg");
+background-image: url("https://box543.bluehost.com:2083/cpsess5064194921/viewer/home1%2fstevesel%2fpublic_html%2fhotspot/img3.jpg");
 }
 .slider .slider-inner .slide.slide4 {
 }
