--- a/src/login.html
+++ b/src/login.html
@@ -127,8 +127,6 @@
                 display: flex;
                 flex-direction: column;
                 font-family: Arial, Helvetica, sans-serif;
-                background-image: url(background.png);
-                background-size: cover;
             }
 
             .dots-wrapper {
@@ -164,13 +162,16 @@
                 display: flex;
                 -webkit-overflow-scrolling: touch;
                 scroll-snap-type: x mandatory;
+                touch-action: none;
+                -webkit-user-select: none;
+                -webkit-user-drag: none;
             }
 
             .slide {
                 height: 100%;
                 width: 100%;
                 flex-shrink: 0;
-                background-size: contain;
+                background-size: cover;
                 background-position: 50% 50%;
                 background-repeat: no-repeat;
             }
